# MochiPaw

./: .release-it.ts  Agent.md  Cargo.toml  LICENSE  NOTICE.md  README.md  eslint.config.ts  index.html  package.json  pnpm-lock.yaml  uno.config.ts  vite.config.ts
.github/: CONTRIBUTING.md  DOWNLOAD_GUIDE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yml  sync-to-gitee.yml  upgradelink.yml
LICENSES/: PolyForm-Noncommercial-1.0.0.txt
docs/: upstream-triage.md
public/: contributors.json
scripts/: buildIcon.ts  embed_text_hash.ts  generateContributors.ts  packagePortable.mjs  release.ts
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  MochiPaw.desktop  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/plugins/self-protect/: Cargo.toml  build.rs
src-tauri/src/plugins/self-protect/src/: acl.rs  anti_debug.rs  checks.rs  critical.rs  event.rs  guarded_value.rs  handle_scan.rs  honeypot.rs  hook_detect.rs  integrity.rs  ldr_notify.rs  lib.rs  mitigations.rs  module_audit.rs  obf.rs  parent_check.rs  policy.rs  proc_scan.rs  rwx_scan.rs  syscall.rs  tls_callback.rs  watchdog.rs
src/composables/: useAppMenu.ts  useDevice.ts  useGamepad.ts  useKeyPress.ts  useModel.ts  useTauriListen.ts  useTray.ts  useWindowState.ts
src/constants/: index.ts
src/locales/: en-US.json  index.ts  pt-BR.json  vi-VN.json  zh-CN.json  zh-TW.json
src/plugins/: adminStatus.ts  window.ts
src/router/: index.ts
src/stores/: app.ts  cat.ts  general.ts  model.ts  shortcut.ts
src/utils/: controlledRelease.ts  font.ts  is.ts  keyboard.ts  live2d.ts  modelMetadata.ts  modelResourceMetrics.ts  monitor.test.ts  monitor.ts  path.ts  platform.ts  runtimeTelemetry.ts  (+3 more)
(+65 files in other folders)
